# invoice-db

./: .coverage  .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml  run
invoice_db/: __main.py  cli.py
invoice_db/cli/: app.py  common.py  customers_cmds.py  db_cmds.py  invoices_cmds.py  render_customers.py  render_invoices.py  require.py  validators.py
invoice_db/db/: connection.py  customers.py  invoices.py  reports.py  schema.py  utils.py  validators.py
scripts/: demo.py  demo.sh  init.sh  reset.sh  seed.py  seed_customers.sh  seed_invoices.sh
tests/: conftest.py  test_cli.py  test_customers.py  test_invoice_queries.py  test_invoice_validation.py  test_invoices.py  test_invoices_crud.py
tests/cli/: conftest.py  test_cli_invoices.py
user_invoice_db/db/: customers.py  invoices.py
