[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "invoice-db"
version = "0.6.0"
authors = [{name = "Erick Allen" }]
description = "A CLI tool for managing customers and invoices with SQLite. "
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.scripts]
invoicedb = "invoice_db.cli.app:app"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov"
]